--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,91 @@
-*{
+* {
     padding: 0;
-    margin:0;
+    margin: 0;
 }
 
-body{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 1.2rem;
+:root {
+    --primary-color: #1bc5a9;
+    --box-shadow: 1px 1px 10px 1px rgb(199, 198, 198);
+    --facebook-login: rgb(59, 59, 165);
+    --google-login: rgb(34, 135, 230);
+    --secondary-color: #FFC900;
 }
 
-.btn{
-    padding: 0.5rem;
+html {
+    font-size: 62.5%;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.5rem;
+    background-image: url('https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.btn {
+    padding: 1rem;
     border: none;
     display: flex;
-    gap: 0.7rem;
+    gap: 1rem;
     cursor: pointer;
     color: white;
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    font-size: 1rem;
-
+    font-size: 1.5rem;
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    /* color: black; */
 }
 
-.btn:hover{
+.btn:hover {
     opacity: 0.9;
 }
 
-.dislayFlex{
+.displayFlex {
     display: flex;
+}
+
+.highlightText {
+    color: var(--secondary-color);
+}
+
+.input {
+    padding: 1rem;
+    outline: none;
+    border: 2px solid var(--primary-color);
+    border-radius: 0.5rem;
+}
+
+.removeUnderline {
+    text-decoration: none;
+}
+
+.centerText {
+    text-align: center;
+}
+
+.whiteText {
+    color: white;
+}
+
+@media screen and (max-width:768px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media screen and (max-width:425px) {
+    html {
+        font-size: 45%;
+    }
 }
